--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -28,21 +28,22 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        version: [el8, el9, ubuntu2004, ubuntu2204, ubuntu2404, arch, al2023, debian]
+        #version: [el8, el9, ubuntu2004, ubuntu2204, ubuntu2404, arch, al2023, debian]
+        version: [ubuntu2004, ubuntu2204, ubuntu2404]
         include:
-          - version: el8
-            container: andywick/arkime-build-8:5.0.0-2
-            buildopt: "--kafka --pfring"
-            package: rpm
-            fpmdeps: "-d perl-libwww-perl -d perl-JSON -d ethtool -d libyaml -d perl-LWP-Protocol-https"
-            ja4plus: true
+          # - version: el8
+          #   container: andywick/arkime-build-8:5.0.0-2
+          #   buildopt: "--kafka --pfring"
+          #   package: rpm
+          #   fpmdeps: "-d perl-libwww-perl -d perl-JSON -d ethtool -d libyaml -d perl-LWP-Protocol-https"
+          #   ja4plus: true
 
-          - version: el9
-            container: andywick/arkime-build-9:5.0.0-2
-            buildopt: "--kafka --pfring"
-            fpmdeps: "-d perl-libwww-perl -d perl-JSON -d ethtool -d libyaml -d perl-LWP-Protocol-https"
-            package: rpm
-            notice: true
+          # - version: el9
+          #   container: andywick/arkime-build-9:5.0.0-2
+          #   buildopt: "--kafka --pfring"
+          #   fpmdeps: "-d perl-libwww-perl -d perl-JSON -d ethtool -d libyaml -d perl-LWP-Protocol-https"
+          #   package: rpm
+          #   notice: true
 
           - version: ubuntu2004
             container: andywick/arkime-build-20:5.0.0-2
@@ -62,23 +63,23 @@ jobs:
             fpmdeps: "-d libwww-perl -d libjson-perl -d ethtool -d libyaml-dev -d liblua5.4-0 -d libmaxminddb0 -d libcurl4 -d libpcap0.8 -d libglib2.0-0 -d libnghttp2-14 -d libyara10 -d librdkafka1 -d libpcre3"
             package: deb
 
-          - version: arch
-            container: andywick/arkime-build-arch:5.0.0-3
-            buildopt: "--kafka"
-            fpmdeps: "-d libmaxminddb -d libpcap -d yara -d perl-http-message -d perl-lwp-protocol-https -d perl-json -d libnet -d lua -d zstd -d openssl-1.1 -d pcre"
-            package: arch
+          # - version: arch
+          #   container: andywick/arkime-build-arch:5.0.0-3
+          #   buildopt: "--kafka"
+          #   fpmdeps: "-d libmaxminddb -d libpcap -d yara -d perl-http-message -d perl-lwp-protocol-https -d perl-json -d libnet -d lua -d zstd -d openssl-1.1 -d pcre"
+          #   package: arch
 
-          - version: al2023
-            container: andywick/arkime-build-al2023:5.0.0-2
-            buildopt: "--kafka"
-            fpmdeps: "-d perl-libwww-perl -d perl-JSON -d ethtool -d libyaml -d perl-LWP-Protocol-https"
-            package: rpm
+          # - version: al2023
+          #   container: andywick/arkime-build-al2023:5.0.0-2
+          #   buildopt: "--kafka"
+          #   fpmdeps: "-d perl-libwww-perl -d perl-JSON -d ethtool -d libyaml -d perl-LWP-Protocol-https"
+          #   package: rpm
 
-          - version: debian12
-            container: andywick/arkime-build-d12:5.0.0-3
-            buildopt: "--nothirdparty --kafka"
-            fpmdeps: "-d libwww-perl -d libjson-perl -d ethtool -d libyaml-dev -d liblua5.4-0 -d libmaxminddb0 -d libcurl4 -d libpcap0.8 -d libglib2.0-0 -d libnghttp2-14 -d libyara9 -d librdkafka1 -d libpcre3"
-            package: deb
+          # - version: debian12
+          #   container: andywick/arkime-build-d12:5.0.0-3
+          #   buildopt: "--nothirdparty --kafka"
+          #   fpmdeps: "-d libwww-perl -d libjson-perl -d ethtool -d libyaml-dev -d liblua5.4-0 -d libmaxminddb0 -d libcurl4 -d libpcap0.8 -d libglib2.0-0 -d libnghttp2-14 -d libyara9 -d librdkafka1 -d libpcre3"
+          #   package: deb
 
 ############# CHANGE version: array above when adding new versions #############
 
@@ -199,120 +200,120 @@ jobs:
             The EL7 and Ubuntu 18 builds are still available [here](https://arkime.com/downloads-old#latest) until 5/1/2024.
 
   #### ARM Builds ###
-  build-release-arm:
-    permissions:
-      contents: write
+#   build-release-arm:
+#     permissions:
+#       contents: write
 
-    concurrency:
-      group: arm-${{ github.workflow }}-${{ matrix.version }}-${{ github.event.inputs.release_tag }}
-      cancel-in-progress: true
+#     concurrency:
+#       group: arm-${{ github.workflow }}-${{ matrix.version }}-${{ github.event.inputs.release_tag }}
+#       cancel-in-progress: true
 
-    strategy:
-      fail-fast: false
-      matrix:
-        version: [al2023, ubuntu2204, ubuntu2404, debian12]
-        include:
-          - version: al2023
-            container: andywick/arkime-build-al2023-arm64:5.0.0-3
-            buildopt: "--kafka"
-            fpmdeps: "-d perl-libwww-perl -d perl-JSON -d ethtool -d libyaml -d perl-LWP-Protocol-https"
-            package: rpm
-            ja4plus: true
+#     strategy:
+#       fail-fast: false
+#       matrix:
+#         version: [al2023, ubuntu2204, ubuntu2404, debian12]
+#         include:
+#           - version: al2023
+#             container: andywick/arkime-build-al2023-arm64:5.0.0-3
+#             buildopt: "--kafka"
+#             fpmdeps: "-d perl-libwww-perl -d perl-JSON -d ethtool -d libyaml -d perl-LWP-Protocol-https"
+#             package: rpm
+#             ja4plus: true
 
-          - version: ubuntu2204
-            container: andywick/arkime-build-22-arm64:5.0.0-3
-            buildopt: "--nothirdparty --kafka"
-            fpmdeps: "-d libwww-perl -d libjson-perl -d ethtool -d libyaml-dev -d liblua5.4-0 -d libmaxminddb0 -d libcurl4 -d libpcap0.8 -d libglib2.0-0 -d libnghttp2-14 -d libyara8 -d librdkafka1"
-            package: deb
+#           - version: ubuntu2204
+#             container: andywick/arkime-build-22-arm64:5.0.0-3
+#             buildopt: "--nothirdparty --kafka"
+#             fpmdeps: "-d libwww-perl -d libjson-perl -d ethtool -d libyaml-dev -d liblua5.4-0 -d libmaxminddb0 -d libcurl4 -d libpcap0.8 -d libglib2.0-0 -d libnghttp2-14 -d libyara8 -d librdkafka1"
+#             package: deb
 
-          - version: ubuntu2404
-            container: andywick/arkime-build-24-arm64:5.0.0-3
-            buildopt: "--nothirdparty --kafka"
-            fpmdeps: "-d libwww-perl -d libjson-perl -d ethtool -d libyaml-dev -d liblua5.4-0 -d libmaxminddb0 -d libcurl4 -d libpcap0.8 -d libglib2.0-0 -d libnghttp2-14 -d libyara10 -d librdkafka1 -d libpcre3"
-            package: deb
+#           - version: ubuntu2404
+#             container: andywick/arkime-build-24-arm64:5.0.0-3
+#             buildopt: "--nothirdparty --kafka"
+#             fpmdeps: "-d libwww-perl -d libjson-perl -d ethtool -d libyaml-dev -d liblua5.4-0 -d libmaxminddb0 -d libcurl4 -d libpcap0.8 -d libglib2.0-0 -d libnghttp2-14 -d libyara10 -d librdkafka1 -d libpcre3"
+#             package: deb
 
-          - version: debian12
-            container: andywick/arkime-build-d12-arm64:5.0.0-3
-            buildopt: "--nothirdparty --kafka"
-            fpmdeps: "-d libwww-perl -d libjson-perl -d ethtool -d libyaml-dev -d liblua5.4-0 -d libmaxminddb0 -d libcurl4 -d libpcap0.8 -d libglib2.0-0 -d libnghttp2-14 -d libyara9 -d librdkafka1 -d libpcre3"
-            package: deb
+#           - version: debian12
+#             container: andywick/arkime-build-d12-arm64:5.0.0-3
+#             buildopt: "--nothirdparty --kafka"
+#             fpmdeps: "-d libwww-perl -d libjson-perl -d ethtool -d libyaml-dev -d liblua5.4-0 -d libmaxminddb0 -d libcurl4 -d libpcap0.8 -d libglib2.0-0 -d libnghttp2-14 -d libyara9 -d librdkafka1 -d libpcre3"
+#             package: deb
 
-############# CHANGE version: array above when adding new versions #############
+# ############# CHANGE version: array above when adding new versions #############
 
-    runs-on: buildjet-2vcpu-ubuntu-2204-arm
+#     runs-on: buildjet-2vcpu-ubuntu-2204-arm
 
-    container:
-      image: ${{ matrix.container }}
+#     container:
+#       image: ${{ matrix.container }}
 
-    steps:
-      - name: Checkout repository
-        uses: actions/checkout@b4ffde65f46336ab88eb53be808477a3936bae11 # v4.1.1
-        with:
-          fetch-depth: 0
+#     steps:
+#       - name: Checkout repository
+#         uses: actions/checkout@b4ffde65f46336ab88eb53be808477a3936bae11 # v4.1.1
+#         with:
+#           fetch-depth: 0
 
-      - name: thirdparty
-        run: |
-          if [ -d "/thirdparty" ]; then
-            ln -s /thirdparty .
-          fi
-          git config --global --add safe.directory `pwd`
+#       - name: thirdparty
+#         run: |
+#           if [ -d "/thirdparty" ]; then
+#             ln -s /thirdparty .
+#           fi
+#           git config --global --add safe.directory `pwd`
 
-      - name: build and install
-        run: |
-          ./easybutton-build.sh ${{ matrix.buildopt }} --rminstall
-          export PATH=/opt/arkime/bin:$PATH
-          make install
+#       - name: build and install
+#         run: |
+#           ./easybutton-build.sh ${{ matrix.buildopt }} --rminstall
+#           export PATH=/opt/arkime/bin:$PATH
+#           make install
 
-      - name: package arch
-        if: ${{ matrix.package == 'arch' }}
-        run: |
-          gem install --no-document fpm rexml
-          export ARKIME_VERSION="${{ github.event.inputs.release_tag }}"
-          /root/.local/share/gem/ruby/3.0.0/bin/fpm -s dir -t pacman -n arkime -x opt/arkime/logs -x opt/arkime/raw -v $ARKIME_VERSION --iteration ${{ github.event.inputs.iteration }} --template-scripts --after-install "release/afterinstall.sh" --url "https://arkime.com" --description "Arkime Full Packet System" ${{ matrix.fpmdeps }} -p arkime-${ARKIME_VERSION}-${{github.event.inputs.iteration}}_${{matrix.version}}-aarch64.pkg.tar.zst /opt/arkime
-          ls -l *.zst
+#       - name: package arch
+#         if: ${{ matrix.package == 'arch' }}
+#         run: |
+#           gem install --no-document fpm rexml
+#           export ARKIME_VERSION="${{ github.event.inputs.release_tag }}"
+#           /root/.local/share/gem/ruby/3.0.0/bin/fpm -s dir -t pacman -n arkime -x opt/arkime/logs -x opt/arkime/raw -v $ARKIME_VERSION --iteration ${{ github.event.inputs.iteration }} --template-scripts --after-install "release/afterinstall.sh" --url "https://arkime.com" --description "Arkime Full Packet System" ${{ matrix.fpmdeps }} -p arkime-${ARKIME_VERSION}-${{github.event.inputs.iteration}}_${{matrix.version}}-aarch64.pkg.tar.zst /opt/arkime
+#           ls -l *.zst
 
-      - name: package rpm
-        if: ${{ matrix.package == 'rpm' }}
-        run: |
-          export ARKIME_VERSION="${{ github.event.inputs.release_tag }}"
-          fpm -s dir -t rpm -n arkime -x opt/arkime/logs -x opt/arkime/raw -v $ARKIME_VERSION --iteration ${{ github.event.inputs.iteration }} --template-scripts --after-install "release/afterinstall.sh" --url "https://arkime.com" --description "Arkime Full Packet System" ${{ matrix.fpmdeps }} --rpm-rpmbuild-define "_build_id_links none" -p arkime-${ARKIME_VERSION}-${{github.event.inputs.iteration}}.${{matrix.version}}.aarch64.rpm /opt/arkime
-          ls -l *.rpm
+#       - name: package rpm
+#         if: ${{ matrix.package == 'rpm' }}
+#         run: |
+#           export ARKIME_VERSION="${{ github.event.inputs.release_tag }}"
+#           fpm -s dir -t rpm -n arkime -x opt/arkime/logs -x opt/arkime/raw -v $ARKIME_VERSION --iteration ${{ github.event.inputs.iteration }} --template-scripts --after-install "release/afterinstall.sh" --url "https://arkime.com" --description "Arkime Full Packet System" ${{ matrix.fpmdeps }} --rpm-rpmbuild-define "_build_id_links none" -p arkime-${ARKIME_VERSION}-${{github.event.inputs.iteration}}.${{matrix.version}}.aarch64.rpm /opt/arkime
+#           ls -l *.rpm
 
-      - name: package deb
-        if: ${{ matrix.package == 'deb' }}
-        run: |
-          export ARKIME_VERSION="${{ github.event.inputs.release_tag }}"
-          fpm -s dir -t deb -n arkime -x opt/arkime/logs -x opt/arkime/raw -v $ARKIME_VERSION --iteration ${{ github.event.inputs.iteration }} --template-scripts --after-install "release/afterinstall.sh" --url "https://arkime.com" --description "Arkime Full Packet System" ${{ matrix.fpmdeps }} -p arkime_${ARKIME_VERSION}-${{github.event.inputs.iteration}}.${{matrix.version}}_arm64.deb /opt/arkime
-          ls -l *.deb
+#       - name: package deb
+#         if: ${{ matrix.package == 'deb' }}
+#         run: |
+#           export ARKIME_VERSION="${{ github.event.inputs.release_tag }}"
+#           fpm -s dir -t deb -n arkime -x opt/arkime/logs -x opt/arkime/raw -v $ARKIME_VERSION --iteration ${{ github.event.inputs.iteration }} --template-scripts --after-install "release/afterinstall.sh" --url "https://arkime.com" --description "Arkime Full Packet System" ${{ matrix.fpmdeps }} -p arkime_${ARKIME_VERSION}-${{github.event.inputs.iteration}}.${{matrix.version}}_arm64.deb /opt/arkime
+#           ls -l *.deb
 
-      - name: ja4plus
-        if: ${{ matrix.ja4plus }}
-        run: |
-          (cd .. ; git clone https://github.com/arkime/ja4)
-          cp ../ja4/ja4plus.c capture/plugins
-          (cd capture/plugins; make)
-          mv capture/plugins/ja4plus.so ja4plus.arm64.so
-          rm -f capture/plugins/ja4plus.c
+#       - name: ja4plus
+#         if: ${{ matrix.ja4plus }}
+#         run: |
+#           (cd .. ; git clone https://github.com/arkime/ja4)
+#           cp ../ja4/ja4plus.c capture/plugins
+#           (cd capture/plugins; make)
+#           mv capture/plugins/ja4plus.so ja4plus.arm64.so
+#           rm -f capture/plugins/ja4plus.c
 
-      - name: upload github
-        uses: softprops/action-gh-release@de2c0eb89ae2a093876385947365aca7b0e5f844 # v1
-        with:
-          tag_name: "v${{ github.event.inputs.release_tag }}"
-          draft: false
-          prerelease: true
-          generate_release_notes: false
-          files: |
-            *.deb
-            *.so
-            *.rpm
-            *.zst
+#       - name: upload github
+#         uses: softprops/action-gh-release@de2c0eb89ae2a093876385947365aca7b0e5f844 # v1
+#         with:
+#           tag_name: "v${{ github.event.inputs.release_tag }}"
+#           draft: false
+#           prerelease: true
+#           generate_release_notes: false
+#           files: |
+#             *.deb
+#             *.so
+#             *.rpm
+#             *.zst
 
   #### Slack Msg ###
   slack:
     runs-on: ubuntu-latest
     needs:
       - build-release
-      - build-release-arm
+      #- build-release-arm
     steps:
       - name: send
         env:
