--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -29,7 +29,7 @@ jobs:
       fail-fast: false
       matrix:
         #version: [el8, el9, ubuntu2004, ubuntu2204, ubuntu2404, arch, al2023, debian]
-        version: [ubuntu2004, ubuntu2204, ubuntu2404]
+        version: [ubuntu1804, ubuntu2004, ubuntu2204, ubuntu2404]
         include:
           # - version: el8
           #   container: andywick/arkime-build-8:5.0.0-2
@@ -44,6 +44,11 @@ jobs:
           #   fpmdeps: "-d perl-libwww-perl -d perl-JSON -d ethtool -d libyaml -d perl-LWP-Protocol-https"
           #   package: rpm
           #   notice: true
+          - version: ubuntu1804
+            container: andywick/arkime-build-18:5.0.0-2
+            buildopt: "--kafka --pfring"
+            fpmdeps: "-d libwww-perl -d libjson-perl -d ethtool -d libyaml-dev"
+            package: deb
 
           - version: ubuntu2004
             container: andywick/arkime-build-20:5.0.0-2
